bug: fix line break and line wrap

--- a/textbase/frontend/src/App.css
+++ b/textbase/frontend/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  white-space: pre-wrap;
 }
 
 .logo {
